...
            OiLabel.h4('Alpenglueck CMS', color: colors.primary.base),
          ],
        ),
      ),
      navigation: const [
        OiNavItem(
          label: 'Articles',
          icon: OiIcons.newspaper,
          route: 'articles',
          section: 'Content',
        ),
        OiNavItem(
          label: 'Categories',
          icon: OiIcons.tag,
          route: 'categories',
          section: 'Content',
...
