...
import 'package:obers_ui/obers_ui.dart';
import 'package:obers_ui_widgetbook/helpers/knob_helpers.dart';
import 'package:widgetbook/widgetbook.dart';

const _generalGroup = OiSettingsGroup(
  key: 'general',
  title: 'General',
  description: 'Core application settings',
  icon: OiIcons.settings,
  items: [
    OiSettingsItem(
      key: 'notifications',
      title: 'Enable Notifications',
...
